Avoid using the deprecated URL(String) constructor